<resources>
    <string name="app_name">GamesBestDeals</string>
    <string name="navigation_deals">Deals</string>
    <string name="navigation_games">Games</string>
    <string name="navigation_alerts">Alerts</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_third_fragment">Hello third fragment.</string>
    <string name="ok_text">OK</string>
    <string name="search_text">Search</string>
    <string name="search_count">%1d games found</string>
    <string name="filter_exact_text">Search only by exact query</string>
    <string name="filter_steam_id_hint">You can add steamAppId here</string>
    <string name="filter_amount_title">How many items do you want to see in search results?</string>
    <string name="filter_title">Filter</string>
    <string name="apply_text">Apply</string>
</resources>