<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="bottom"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginTop="@dimen/half_margin"
            android:layout_marginEnd="@dimen/standard_margin"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/filter_title"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cbExact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginTop="@dimen/standard_margin"
            android:layout_marginEnd="@dimen/standard_margin"
            android:gravity="center_vertical"
            android:layoutDirection="rtl"
            android:text="@string/filter_exact_text"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etSteamAppId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginTop="@dimen/standard_margin"
            android:layout_marginEnd="@dimen/standard_margin"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:hint="@string/filter_steam_id_hint"
            app:layout_constraintTop_toBottomOf="@+id/cbExact" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAmountTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginTop="@dimen/standard_margin"
            android:layout_marginEnd="@dimen/standard_margin"
            android:textColor="@color/black"
            android:text="@string/filter_amount_title"
            app:layout_constraintTop_toBottomOf="@+id/etSteamAppId" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/sbAmount"
            android:max="60"
            android:progress="10"
            android:layout_width="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvAmount"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginTop="@dimen/standard_margin"
            android:layout_marginEnd="@dimen/standard_margin"
            app:layout_constraintTop_toBottomOf="@+id/tvAmountTitle" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAmount"
            tools:text="11"
            android:textColor="@color/black"
            android:layout_marginEnd="@dimen/standard_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/sbAmount"
            app:layout_constraintBottom_toBottomOf="@+id/sbAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnApply"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginTop="@dimen/standard_margin"
            android:layout_marginEnd="@dimen/standard_margin"
            android:layout_marginBottom="@dimen/standard_margin"
            android:textColor="@color/white"
            android:text="@string/apply_text"
            android:textAllCaps="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sbAmount" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>